# EnergyPlus-Cpp-Demo

./: .gitignore  CMakeLists.txt  README.md  build_and_test.sh  conanfile.txt  iwyu.imp  main.cpp
.github/workflows/: build.yml  clang-format-check.yml  clang-tidy.yml  cppcheck.yml
src/: AboutComponent.cpp  AboutComponent.hpp  EnergyPlus.cpp  EnergyPlus.hpp  ErrorMessage.cpp  ErrorMessage.hpp  LogDisplayer.cpp  LogDisplayer.hpp  MainComponent.cpp  MainComponent.hpp  main.cpp
src/ftxui/: modal.cpp  modal.hpp
src/sqlite/: PreparedStatement.cpp  PreparedStatement.hpp  SQLiteReports.cpp  SQLiteReports.hpp
src/utilities/: ASCIIStrings.hpp
test/: EPCLI_GTests.cpp  eplusout.err
